# ifcpp-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Adapter.h  Engine.h  csg.hpp  csgjs.h  earcut.hpp  main.cpp
